--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,8 +6,12 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.VIBRATE" />
 
-    <permission android:name="com.rayhan.githubuser.READ_DATABASE" android:protectionLevel="normal"/>
-    <permission android:name="com.rayhan.githubuser.WRITE_DATABASE" android:protectionLevel="normal"/>
+    <permission
+        android:name="com.rayhan.githubuser.READ_DATABASE"
+        android:protectionLevel="normal" />
+    <permission
+        android:name="com.rayhan.githubuser.WRITE_DATABASE"
+        android:protectionLevel="normal" />
 
     <application
         android:allowBackup="true"
@@ -16,6 +20,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GithubUser">
+        <provider
+            android:name=".provider.GithubUserProvider"
+            android:authorities="com.rayhan.githubuser"
+            android:enabled="true"
+            android:exported="true"
+            android:readPermission="com.rayhan.githubuser.READ_DATABASE"
+            android:writePermission="com.rayhan.githubuser.WRITE_DATABASE"/>
+
         <receiver
             android:name=".alarm.ReminderReceiver"
             android:enabled="true"
