--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,13 +64,13 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
 
     // HTTP API lib
-    implementation 'com.loopj.android:android-async-http:1.4.9'
+    implementation 'com.loopj.android:android-async-http:1.4.11'
 
     // asyntask
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
-
-    implementation 'androidx.preference:preference:1.1.1'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.2.0'
 }
 
 repositories {
