--- a/consumerapp/build.gradle
+++ b/consumerapp/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
@@ -62,7 +62,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
 
     // HTTP API lib
-    implementation 'com.loopj.android:android-async-http:1.4.9'
+    implementation 'com.loopj.android:android-async-http:1.4.11'
 
     // asyntask
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9"
@@ -70,6 +70,8 @@ dependencies {
     implementation 'androidx.preference:preference:1.1.1'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.2.0'
 }
 
 repositories {
